# ChangeLog for app-emacs/babel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*babel-0.6 (06 Nov 2008)

  06 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +files/50babel-gentoo.el,
  +files/babel-0.6-junk.patch, +metadata.xml, +babel-0.6.ebuild:
  Initial import. Ebuild contributed by me.
