@@ -1,6 +1,8 @@
 AUX 50babel-gentoo.el 480 RMD160 d913121eb1c497a367a8016e9edb10c9f7e96333 SHA1 cf5e1ab561aa5ba3bba419010182ef6aac76505d SHA256 d550eaf3312b8cc8d513810b45a285c08f34ef7f5855f0791c7525d052bf2168
 AUX babel-0.6-junk.patch 379 RMD160 6b825c6c4ea9ef0967a07a644babc7b2f0603a43 SHA1 752d8b49b80bf24bbfbe45b362e15b502b86208f SHA256 3f7ed115b0643a1adbf3a07dcfefd867fbf142f732634853a4d7f9b6aa1435a0
 DIST babel-0.6.el.bz2 7923 RMD160 81fae8fc3f956ecd63ff3fd3159768bbb368cdf3 SHA1 30fdf33de602242c370a254f432ea5bd5fecc2f3 SHA256 9acf940c7871e4e12fc9034db71c5c0fb089ed57c3dfb7c59eaa5882ac3fc45a
+DIST babel-0.7.el.bz2 8046 RMD160 3f28edce31264f861b3b7cf7e46502ff90d0b2a7 SHA1 4f9f3b8aa7047cadd349675cbcab19bebe39e089 SHA256 04440d54d94f9c82145d84431a17ded6744f949f4e800e105dc597fb63f843b8
 EBUILD babel-0.6.ebuild 542 RMD160 af3ad7a9185351373eafde5f0f08a3f65d67879b SHA1 e9b4bd5e091e95355770441e45ceb7854ed47c79 SHA256 bfa2369740b6ecddd762d9e2428dd19fad3b7cfe9009744de2fc3629e6c6670a
-MISC ChangeLog 325 RMD160 270bd8a30e9f1e0a6ea5a00d33c1a9dd68a5bfeb SHA1 45dd24a00e21e49e541303eb6022f4fd18059a8e SHA256 c48bae33dcadcf7b0464b591b785297d882a848f0c8f0904974f6b550ffaa8ff
+EBUILD babel-0.7.ebuild 476 RMD160 d6f3e762ce88331c251a6825633c07ee1be6ac14 SHA1 4e59159a3041baa3b02f556922347541697f7182 SHA256 4390120b89a7019f66364fb1630bfeccbe79079fc2ac5609e48d336a6de5e2b4
+MISC ChangeLog 434 RMD160 3da9e3dda6b2d8ae9bb988976cb5e38d5b8f1177 SHA1 2c22497e62588b076f0292815f0598c77437ed33 SHA256 233a2b0eded6f3a88b6acff2955d9ba76d2ca0ad42d43b75d9bb694842bb51af
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
