@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*babel-0.7 (10 Nov 2008)
+
+  10 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +babel-0.7.ebuild:
+  Version bump.
+
 *babel-0.6 (06 Nov 2008)
 
   06 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +files/50babel-gentoo.el,
